--- a/landingHTML/stylesheets/styles.css
+++ b/landingHTML/stylesheets/styles.css
@@ -1,3 +1,6 @@
+nav{
+  height: 15%;
+}
 table th{
   padding: 5px;
   font-family: 'Raleway', sans-serif;
@@ -32,7 +35,7 @@ header {
   color: rgb(240, 180, 0);
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  font-size: 45px;
+  font-size: 60px;
   -webkit-text-stroke: 1px black;
   color: rgb(240, 180, 0);
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
@@ -44,7 +47,7 @@ header {
   color: rgb(40, 170, 200);
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  font-size: 40px;
+  font-size: 52px;
   -webkit-text-stroke: 1px black;
   color: white;
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
@@ -54,4 +57,9 @@ header {
 
 .iphone-screen {
   text-align:center;
+}
+
+.card-text{
+  font-weight: 400;
+  font-size: 21px;
 }
