--- a/dogmatic-app/src/components/BottomNav.css
+++ b/dogmatic-app/src/components/BottomNav.css
@@ -1,9 +1,8 @@
 .bottomRow{
   color: rgb(243, 178, 36);
-  margin: 0;
+  margin-top: 10vh;
   padding: 0;
-  padding-top: 5px;
-  height: 90px;
+  height: 10vh;
   width: 100vw;
   position: absolute;
   bottom: 0;
