--- a/dogmatic-app/src/components/BottomNav.css
+++ b/dogmatic-app/src/components/BottomNav.css
@@ -7,7 +7,7 @@
   position: absolute;
   bottom: 0;
   background-color: rgb(26, 154, 189);
-  font-size: 24px;
+  font-size: 16px;
   line-height: 1;
 }
 
@@ -27,4 +27,8 @@
 
 .bottomRow .finalCol {
   border-right: none;
+}
+
+.bottomRow span {
+  font-size: 40px;
 }
